--- a/boards.cfg
+++ b/boards.cfg
@@ -779,6 +779,7 @@ Active  powerpc     mpc85xx        -           freescale       corenet_ds       
 Active  powerpc     mpc85xx        -           freescale       corenet_ds          P4080DS_SRIO_PCIE_BOOT               P4080DS:SRIO_PCIE_BOOT_SLAVE,SYS_TEXT_BASE=0xFFF40000                                                                             -
 Active  powerpc     mpc85xx        -           varisys         cyrus        Cyrus      cyrus:RAMBOOT_PBL,SYS_TEXT_BASE=0xFFF80000,PPC_P5020			-
 Active  powerpc     mpc85xx        -           varisys         cyrus        Cyrus_v2      cyrus:RAMBOOT_PBL,SYS_TEXT_BASE=0xFFF80000,PPC_P5020,CYRUS_V2			-
+Active  powerpc     mpc85xx        -           varisys         cyrus        Cyrus_v2_2      cyrus:RAMBOOT_PBL,SYS_TEXT_BASE=0xFFF80000,PPC_P5020,CYRUS_V2_2			-
 Active  powerpc     mpc85xx        -           varisys         cyrus        Cyrus_3041      cyrus:RAMBOOT_PBL,SYS_TEXT_BASE=0xFFF80000,PPC_P3041			-
 Active  powerpc     mpc85xx        -           varisys         cyrus        Cyrus_5040      cyrus:RAMBOOT_PBL,SYS_TEXT_BASE=0xFFF80000,PPC_P5040			-
 Active  powerpc     mpc85xx        -           varisys       tabor             Tabor                tabor:36BIT,SDCARD     -
