Import Cyrus support into SDK v1.4
Conflicts:
	boards.cfg

--- a/arch/powerpc/cpu/mpc85xx/Kconfig
+++ b/arch/powerpc/cpu/mpc85xx/Kconfig
@@ -149,6 +149,8 @@ config TARGET_XPEDITE550X
 config TARGET_UCP1020
 	bool "Support uCP1020"
 
+config TARGET_CYRUS
+
 endchoice
 
 source "board/freescale/b4860qds/Kconfig"
