Initial board files for Tabor
Conflicts:
	boards.cfg

--- a/arch/powerpc/cpu/mpc85xx/Kconfig
+++ b/arch/powerpc/cpu/mpc85xx/Kconfig
@@ -152,6 +152,8 @@ config TARGET_UCP1020
 config TARGET_CYRUS
 	bool "Support Varisys Cyrus"
 
+config TARGET_TABOR
+	bool "Support Varisys Tabor"
 
 
 endchoice
@@ -191,6 +193,7 @@ source "board/keymile/kmp204x/Kconfig"
 source "board/sbc8548/Kconfig"
 source "board/socrates/Kconfig"
 source "board/varisys/cyrus/Kconfig
+source "board/varisys/tabor/Kconfig
 source "board/xes/xpedite520x/Kconfig"
 source "board/xes/xpedite537x/Kconfig"
 source "board/xes/xpedite550x/Kconfig"
