Clean up cyrus ethernet

--- a/board/varisys/cyrus/Makefile
+++ b/board/varisys/cyrus/Makefile
@@ -2,5 +2,5 @@
 
 obj-y	+= $(BOARD).o
 obj-y	+= ddr.o
-obj-$(CONFIG_CYRUS)	+= eth_hydra.o
+obj-$(CONFIG_CYRUS)	+= eth.o
 obj-$(CONFIG_CYRUS)	+= p5020ds_ddr.o
