--- a/board/varisys/cyrus/Makefile
+++ b/board/varisys/cyrus/Makefile
@@ -2,5 +2,7 @@
 
 obj-y	+= $(BOARD).o
 obj-y	+= ddr.o
-obj-$(CONFIG_CYRUS)	+= eth.o
-obj-$(CONFIG_CYRUS)	+= p5020ds_ddr.o
+obj-y	+= law.o
+obj-y	+= tlb.o
+obj-y	+= eth.o
+obj-$(CONFIG_PCI) += pci.o
